--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-  ]
+, "app/+not-found.js", "app/+html.js", "app/_layout.js", "my-app/App.js", "app/(tabs)/_layout.js", "app/(tabs)/explore.js", "app/(tabs)/index.js"  ]
 }
